# libaoscdk

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: Doxyfile.in  dkir-specs.md  dkrpc-specs.md  meson.build
include/: libaoscdk.h  meson.build
lib/: lib.c  meson.build
lib/comm/: comm.c
lib/dispatcher/: dispatcher.c
lib/include/: comm.h  config.h.in  dispatcher.h  ir.h  log.h  meson.build  proc.h
lib/ir/: parser.c  store.c
lib/log/: log.c  msg.c  msg.h
lib/proc/: proc.c
tests/: meson.build
utils/: libaoscdk.c  meson.build
